Implemented the concept autocomplete part and also add the reference concept id with hidden field The retire and sections are also added in  AddLabTestType design

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ commonlabtest.admin.manageLabTestAttributeTypes=Manage Test Attribute Types
 
 commonlabtest.labtesttype.manage=Manage Test Types
 commonlabtest.labtesttype.add=Add Test Type
+commonlabtest.labtesttype.edit=Edit Test Type
 commonlabtest.labtesttype.view=View Test Type
 commonlabtest.labtesttype.void=Retire Test Type
 commonlabtest.labtesttype.unvoid=Unretire Test Type
@@ -46,3 +47,5 @@ commonlabtest.confirmMessage.unvoid=Are you sure you want to unvoid this record?
 commonlabtest.confirmMessage.retire=Are you sure you want to retire this record?
 commonlabtest.confirmMessage.unretire=Are you sure you want to unretire this record?
 commonlabtest.confirmMessage.delete=Are you sure you want to permanently DELETE this record?
+
+general.uuid=UUID
