Added The labTestAttributeType UI design

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -13,10 +13,13 @@ commonlabtest.labtesttype.unvoid=Unretire Test Type
 commonlabtest.labtesttype.delete=Delete Test Type
 commonlabtest.labtesttype.list=List Test Types
 
+
 commonlabtest.labtestattributetype.manage=Manage Attribute Types
 commonlabtest.labtestattributetype.add=Add Attribute Type
+commonlabtest.labtestattributetype.edtit=Edit Attribute Type
 commonlabtest.labtestattributetype.view=View Attribute Type
 commonlabtest.labtestattributetype.void=Retire Attribute Type
+commonlabtest.labtestattributetype.save=Save Test Attribute Type
 commonlabtest.labtestattributetype.unvoid=Unretire Attribute Type
 commonlabtest.labtestattributetype.delete=Delete Attribute Type
 commonlabtest.labtestattributetype.list=List Attribute Types
@@ -49,3 +52,23 @@ commonlabtest.confirmMessage.unretire=Are you sure you want to unretire this rec
 commonlabtest.confirmMessage.delete=Are you sure you want to permanently DELETE this record?
 
 general.uuid=UUID
+general.testName=Test Name
+general.referenceConcept =Reference Concept
+general.shortName=Short Name
+general.description=Description
+general.testGroup=Test Group
+general.requiresSpecimen =Requires Specimen
+general.createdBy=Created By
+general.retireReason =Retire Reason
+general.labTestType =Lab Test Type
+general.name =Name
+general.minOccurs =Min Occurs
+general.maxOccurs =Max Occurs
+general.dataType =Data Type
+general.test.retire =Retire Test Type
+general.delete =Delete Test Type forever
+general.datatypeConfiguration=Datatype Configuration
+
+
+
+
