--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -66,10 +66,9 @@ general.minOccurs =Min Occurs
 general.maxOccurs =Max Occurs
 general.dataType =Data Type
 general.test.retire =Retire Test Type
-general.foreverDelete =Delete Test Type forever
+general.delete =Delete Test Type forever
 general.datatypeConfiguration=Datatype Configuration
-general.preferredHandler=Preferred Handler
-general.handlerConfiguration=Handler Configuration
+
 
 
 
