added message.properties with some newentry

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -66,7 +66,7 @@ general.minOccurs =Min Occurs
 general.maxOccurs =Max Occurs
 general.dataType =Data Type
 general.test.retire =Retire Test Type
-general.delete =Delete Test Type forever
+general.foreverDelete =Delete Test Type forever
 general.datatypeConfiguration=Datatype Configuration
 
 
