--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -68,7 +68,6 @@ general.dataType =Data Type
 general.test.retire =Retire Test Type
 general.foreverDelete =Delete Test Type forever
 general.datatypeConfiguration=Datatype Configuration
-
-
-
+general.preferredHandler= Preferred Handler
+general.handlerConfiguration= Handler Configuration
 
