Added testAttributeType controller and jsp , TestType.jsp and PatientLabTest Portlets

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -16,7 +16,7 @@ commonlabtest.labtesttype.list=List Test Types
 
 commonlabtest.labtestattributetype.manage=Manage Attribute Types
 commonlabtest.labtestattributetype.add=Add Attribute Type
-commonlabtest.labtestattributetype.edtit=Edit Attribute Type
+commonlabtest.labtestattributetype.edit=Edit Attribute Type
 commonlabtest.labtestattributetype.view=View Attribute Type
 commonlabtest.labtestattributetype.void=Retire Attribute Type
 commonlabtest.labtestattributetype.save=Save Test Attribute Type
@@ -51,6 +51,13 @@ commonlabtest.confirmMessage.retire=Are you sure you want to retire this record?
 commonlabtest.confirmMessage.unretire=Are you sure you want to unretire this record?
 commonlabtest.confirmMessage.delete=Are you sure you want to permanently DELETE this record?
 
+commonlabtest.order.add =Add Test Order
+commonlabtest.order.list =List Test Order
+commonlabtest.order.labReferenceNo =Lab Reference Number
+commonlabtest.order.id =Test Order Id
+commonlabtest.order.void=Void Test Order
+
+
 general.uuid=UUID
 general.testName=Test Name
 general.referenceConcept =Reference Concept
@@ -59,6 +66,7 @@ general.description=Description
 general.testGroup=Test Group
 general.requiresSpecimen =Requires Specimen
 general.createdBy=Created By
+general.changedBy=Change By
 general.retireReason =Retire Reason
 general.labTestType =Lab Test Type
 general.name =Name
@@ -70,4 +78,6 @@ general.foreverDelete =Delete Test Type forever
 general.datatypeConfiguration=Datatype Configuration
 general.preferredHandler= Preferred Handler
 general.handlerConfiguration= Handler Configuration
+general.testType =Test Type
+
 
