Added LabOrder and LabSample controller and jsp with custom message.properties

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -35,6 +35,7 @@ commonlabtest.labtest.search=Search Lab Tests
 
 commonlabtest.labtestsample.manage=Manage Test Samples
 commonlabtest.labtestsample.add=Add Test Sample
+commonlabtest.labtestsample.list=List Test Sample
 commonlabtest.labtestsample.accept=Accept Test Sample
 commonlabtest.labtestsample.reject=Reject Test Sample
 commonlabtest.labtestsample.view=View Test Sample
@@ -52,11 +53,11 @@ commonlabtest.confirmMessage.unretire=Are you sure you want to unretire this rec
 commonlabtest.confirmMessage.delete=Are you sure you want to permanently DELETE this record?
 
 commonlabtest.order.add =Add Test Order
+commonlabtest.order.edit =Edit Test Order
 commonlabtest.order.list =List Test Order
 commonlabtest.order.labReferenceNo =Lab Reference Number
 commonlabtest.order.id =Test Order Id
 commonlabtest.order.void=Void Test Order
-
 
 general.uuid=UUID
 general.testName=Test Name
@@ -79,5 +80,7 @@ general.datatypeConfiguration=Datatype Configuration
 general.preferredHandler= Preferred Handler
 general.handlerConfiguration= Handler Configuration
 general.testType =Test Type
-
-
+general.encounter= Encounter
+general.reason= Reason
+general.careSetting =Care Setting
+general.scheduledDate = Date Scheduled
