Added Lab Test Result, Sample and Order  Controller and jsp pages

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -44,6 +44,9 @@ commonlabtest.labtestsample.unvoid=Unvoid Test Sample
 commonlabtest.labtestsample.delete=Delete Test Sample
 commonlabtest.labtestsample.list=List Test Sample
 commonlabtest.labtestsample.search=Search Test Samples
+commonlabtest.labtestsample.detail=Test Samples Detail
+commonlabtest.labtestsample.retire=Retire Test Sample
+
 
 commonlabtest.confirmMessage.save=Are you sure you want to save this record?
 commonlabtest.confirmMessage.void=Are you sure you want to void this record?
@@ -58,6 +61,15 @@ commonlabtest.order.list =List Test Order
 commonlabtest.order.labReferenceNo =Lab Reference Number
 commonlabtest.order.id =Test Order Id
 commonlabtest.order.void=Void Test Order
+commonlabtest.order.detail=Test Order Detail
+
+
+commonlabtest.result.detail=Test Result Detail
+commonlabtest.result.add= Add Test Result
+commonlabtest.result.edit= Edit Test Result
+commonlabtest.result.save= Save Test Result
+commonlabtest.result.void= Void Test Result
+
 
 general.uuid=UUID
 general.testName=Test Name
@@ -84,3 +96,8 @@ general.encounter= Encounter
 general.reason= Reason
 general.careSetting =Care Setting
 general.scheduledDate = Date Scheduled
+general.specimenType =Specimen Type 
+general.specimenSite =Specimen Site
+general.collector =Collector
+general.status =Status
+general.sortWeight =Sort Weight
