Updated code up to test sample

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -47,6 +47,8 @@ commonlabtest.labtestsample.search=Search Test Samples
 commonlabtest.labtestsample.detail=Test Samples Detail
 commonlabtest.labtestsample.retire=Retire Test Sample
 commonlabtest.labtestsample.collectionDate =Collection Date
+commonlabtest.labtestsample.unit =Unit
+commonlabtest.labtestsample.quantity =Quantity
 
 commonlabtest.confirmMessage.save=Are you sure you want to save this record?
 commonlabtest.confirmMessage.void=Are you sure you want to void this record?
