--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -35,6 +35,7 @@ commonlabtest.labtest.search=Search Lab Tests
 
 commonlabtest.labtestsample.manage=Manage Test Samples
 commonlabtest.labtestsample.add=Add Test Sample
+commonlabtest.labtestsample.edit=Edit Test Sample
 commonlabtest.labtestsample.list=List Test Sample
 commonlabtest.labtestsample.accept=Accept Test Sample
 commonlabtest.labtestsample.reject=Reject Test Sample
