- Test Result form is added (View, add and update) - View test order is added - liquibase chnaged also added - new directory path is added in commonLabTestActivator - hover effects implemented on all most all the commonlabtest forms.

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -104,3 +104,5 @@ general.specimenSite =Specimen Site
 general.collector =Collector
 general.status =Status
 general.sortWeight =Sort Weight
+general.backToDashboard =Back To Patient Dashboard
+general.instructions =Instructions
