added result comments in Test Results form

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -84,6 +84,7 @@ general.requiresSpecimen =Requires Specimen
 general.createdBy=Created By
 general.changedBy=Change By
 general.retireReason =Retire Reason
+general.voidReason =Void Reason
 general.labTestType =Lab Test Type
 general.name =Name
 general.minOccurs =Min Occurs
