- Added sample identifier in sample test. - Autopopulate lab reference Id with timestamp - add global properties for file extensions - add void test result - implement the freezing condition on lab test sample manage - remove the comments field from lab test result form

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -50,6 +50,7 @@ commonlabtest.labtestsample.retire=Retire Test Sample
 commonlabtest.labtestsample.collectionDate =Collection Date
 commonlabtest.labtestsample.unit =Unit
 commonlabtest.labtestsample.quantity =Quantity
+commonlabtest.labtestsample.sampleIdentifier =Sample Identifier
 
 commonlabtest.confirmMessage.save=Are you sure you want to save this record?
 commonlabtest.confirmMessage.void=Are you sure you want to void this record?
