- Added Hint field in labTestAttributeType - Resolved the reported bugs from QA

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -111,6 +111,7 @@ general.status =Status
 general.sortWeight =Sort Weight
 general.backToDashboard =Back To Patient Dashboard
 general.instructions =Instructions
+general.hint =hint
 
 error.message.noAttributeType.found = Attribute types not found for this test type
 
