Added grouping for metadata

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -23,6 +23,8 @@ commonlabtest.labtestattributetype.save=Save Test Attribute Type
 commonlabtest.labtestattributetype.unvoid=Unretire Attribute Type
 commonlabtest.labtestattributetype.delete=Delete Attribute Type
 commonlabtest.labtestattributetype.list=List Attribute Types
+commonlabtest.labtestattributetype.groupId=Group Id
+commonlabtest.labtestattributetype.groupName=Group Name
 
 commonlabtest.labtest.manage=Manage Lab Tests
 commonlabtest.labtest.add=Add Lab Test
