--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -113,7 +113,7 @@ general.status =Status
 general.sortWeight =Sort Weight
 general.backToDashboard =Back To Patient Dashboard
 general.instructions =Instructions
-general.hint =hint
+general.hint =Hint
 
 error.message.noAttributeType.found = Attribute types not found for this test type
 
