--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -25,6 +25,7 @@ commonlabtest.labtestattributetype.delete=Delete Attribute Type
 commonlabtest.labtestattributetype.list=List Attribute Types
 commonlabtest.labtestattributetype.groupId=Group Id
 commonlabtest.labtestattributetype.groupName=Group Name
+commonlabtest.labtestattributetype.multisetName =Multiset Name
 
 commonlabtest.labtest.manage=Manage Lab Tests
 commonlabtest.labtest.add=Add Lab Test
@@ -114,6 +115,8 @@ general.sortWeight =Sort Weight
 general.backToDashboard =Back To Patient Dashboard
 general.instructions =Instructions
 general.hint =Hint
+general.encounterType =Encounter Type
+general.dateCreated = Date Created
 
 error.message.noAttributeType.found = Attribute types not found for this test type
 
